objects/Pull_Request_Review__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pull_Request__c</fullName>
        <label>Pull Request</label>
        <referenceTo>Pull_Request__c</referenceTo>
        <relationshipName>Pull_Request_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Review_Action__c</fullName>
        <label>Review Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Id__c</fullName>
        <externalId>true</externalId>
        <label>Review Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URL_Link__c</fullName>
        <formula>IF(
 ISBLANK(Url__c),
 &quot;&quot;,
 HYPERLINK(Url__c, &quot;Go to Review&quot;)
)</formula>
        <label>URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Avatar_Url__c</fullName>
        <label>User Avatar Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Avatar__c</fullName>
        <formula>IMAGE(User_Avatar_Url__c, Username__c, 50, 50)</formula>
        <label>User Avatar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pull Request Review</label>
    <nameField>
        <displayFormat>Review-{00000}</displayFormat>
        <label>Pull Request Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pull Request Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>